[tool.poetry]
name = "aiochsa"
version = "0.1.0"
description = "An experimental wrapper around aiochclient to use it with SQLAlchemy"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.3"
aiochclient = "^1.2"
clickhouse-sqlalchemy = {git = "https://github.com/ods/clickhouse-sqlalchemy.git", branch="column_table_prefix"}
[tool.poetry.dev-dependencies]
pytest = "^5.1"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
