[metadata]
name = aiochsa
description = Clickhouse Python/asyncio library for use with SQLAlchemy core
long_description = file: README.rst
author = Denis Otkidach
author_email = denis.otkidach@gmail.com
url = https://github.com/ods/aiochsa
license = MIT

[options]
packages =
    aiochsa
python_requires = >=3.7
install_requires =
    aiohttp>=3.7.2,<4.0.0
    backports.zoneinfo;python_version<"3.9"
    clickhouse_sqlalchemy>=0.1.5
    lark-parser>=0.11.2
    simplejson>=3.16.0
    sqlalchemy>=1.3.0
setup_requires =
    setuptools_scm>=3.3.3

[options.package_data]
aiochsa = type.lark

[tool:pytest]
testpaths = tests
addopts = --strict-markers -r aP --tb=native
filterwarnings = error

[coverage:run]
branch = True
source = .
omit =
   setup.py
   tests/*
   .tox/*

[coverage:report]
show_missing = True


[tox:tox]
envlist = py{37,38,39},ch{19_16,20_3,20_8},mypy

[testenv]
deps =
    lovely-pytest-docker>=0.1.0
    pytest>=6.2.0
    pytest-asyncio>=0.14.0
    pytest-cov>=2.11.1
    six # Required by lovely-pytest-docker, but not included in its deps
commands = pytest {posargs:--cov --cov-report=}

# The versions here are picked from from Altinity Stable Releases
# https://docs.altinity.com/altinitystablerelease/releasenotes/
[testenv:ch19_16]
basepython = python3.8
setenv = CLICKHOUSE_VERSION = 19.16.19.85
[testenv:ch20_3]
basepython = python3.8
setenv = CLICKHOUSE_VERSION = 20.3.19.4
[testenv:ch20_8]
basepython = python3.8
setenv = CLICKHOUSE_VERSION = 20.8.12.2

[testenv:mypy]
basepython = python3.9
deps =
    lovely-pytest-docker>=0.1.0
    mypy
    pytest>=5.1.0
    pytest-asyncio>=0.10.0
    pytest-cov>=2.7.1
    six # Required by lovely-pytest-docker, but not included in its deps
commands = mypy -p aiochsa -p tests

[mypy]
follow_imports = silent
ignore_missing_imports = True
